added_image_download

--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -305,6 +305,7 @@ div.MemeList{
   color: #3c70ab;
   margin-bottom: 1vh;
   font-weight: 500;
+  margin-top: 1vh;
 }
 
 input[type=text] {
@@ -322,6 +323,15 @@ input[type=text] {
 
 #inputField2{
   margin-top: 1vh;
+  width: 10vw;
+  max-width: 10vw;
+  color: white;
+  background-color: #555;
+  border-radius: 5px;
+}
+
+#titleInput{
+  margin-top: 0vh;
   width: 10vw;
   max-width: 10vw;
   color: white;
