--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -500,6 +500,28 @@ input[type=text] {
   display: none;
 }
 
+.inline {
+  display: flex;
+  flex-flow: row;
+}
+
+.formatIcon {
+  border-radius: 6px;
+  padding: .18vw;
+}
+
+.formatIcon:hover {
+  background: #444;
+  transition: 0.23s ease-in-out;
+}
+
+#speechToText {
+  display: flex;
+  align-self: center;
+  float: right;
+  margin: 0vh 1.8vw;
+}
+
 #wait-container {
   width: 100%;
   height: 100%;
