--- a/react-frontend/src/styles.css
+++ b/react-frontend/src/styles.css
@@ -55,4 +55,11 @@ body{
     color: white;
 }
 
+.square {
+    display: flex;
+    width: 100px;
+    height: 100px;
+    background-color: red;
+  }
+
 
