--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -637,16 +637,19 @@ input[type=text] {
 #my-memes-container {
   display: block;
   width: 100%;
-  height: 6cm;
+  height: 40vh;
   overflow-x: visible;
   margin-top: 30px;
 }
 
 .vertical-scroll-gallery {
-  width: 90%;
-  height: 5cm;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  margin-left: 2vw;
+  width: 90vw;
+  height: 24vh;
   display: inline-flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: left;
   justify-items: left;
   align-items: flex-start;
@@ -683,4 +686,8 @@ input[type=text] {
   height: 100%;
   object-fit: cover;
   border-radius: 20px;
+}
+
+h2{
+  margin-left: 2vw;
 }
