--- a/react-frontend/src/styles.css
+++ b/react-frontend/src/styles.css
@@ -93,12 +93,7 @@ body{
 }
 
 .backgroundimg{
-    background-image: url("https://digwallpapers.com/wallpapers/full/d/d/4/125072-1920x1080-shiba-inu-background-image-desktop-hd.jpg");
-    position: fixed;
-    min-width: 100%;
-    min-height: 100%;
-    background-size: cover;
-    background-position: center;
+    background-image: url("https://media.istockphoto.com/id/483771322/vector/green-polka-dots-vector-background-vector.jpg?b=1&s=170667a&w=0&k=20&c=t5WU9o3bg4Uooojwd5t03YmuV6zgC8jLuJ77OVfP3Fo=");
 }
 
 .background{
