--- a/react-frontend/src/styles.css
+++ b/react-frontend/src/styles.css
@@ -111,12 +111,12 @@ body{
     max-height: 200px;
   }  
 
-.grid-container {
+  .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(5, 1fr); /* specify 5 columns with equal width */
     grid-auto-rows: 150px;
-    grid-gap: 5px; 
-    overflow-x: hidden; /* hide the horizontal scrollbar*/
+    grid-gap: 5px;
+    overflow-x: hidden;
     overflow-y: hidden;
   }
   
