Small css file change

--- a/react-frontend/src/Pages/Editor/editor.module.css
+++ b/react-frontend/src/Pages/Editor/editor.module.css
@@ -1,3 +1,11 @@
+.anton-regular {
+    font-family: "Anton", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+
+
 .center {
     align-content: center;
     padding: 5%;
